feat(carddemo-app): rewrite InterestCalculationApp as proper INTCALC composition root
Rewrite java/carddemo-app/.../app/InterestCalculationApp.java (704 lines, +488/-67)
as the canonical composition root for the Java translation of
app/jcl/INTCALC.jcl (the CBACT04C interest accrual job).

Critical bug fix
----------------
The pre-existing implementation wrote TRANSACT output to the regular shared
AWS.M2.CARDDEMO.TRANSACT VSAM KSDS via 'carddemo.file.transact.path'. This
would CORRUPT the production transaction master used by every other batch
and online program (CBTRN02C, COTRN00C, CBTRN03C, etc.).

The JCL allocates TRANSACT DD as:
    DSN=AWS.M2.CARDDEMO.SYSTRAN(+1), DISP=(NEW,CATLG,DELETE),
    DCB=(RECFM=F,LRECL=350,BLKSIZE=0)

i.e. a NEW generation +1 of the SYSTRAN generation data group. This rewrite
adds:
  * SYSTRAN_GDG_BASE = "AWS.M2.CARDDEMO.SYSTRAN" (distinct from TRANSACT)
  * resolveSystranPath() helper with explicit-override + GDG +1 fallback
  * computeNextGeneration(Path) scanning G####V00 generation suffixes
  * GENERATION_NAME_FORMAT = "G%04dV00"

Aligned with peer composition roots (PostTransactionsApp, TransactionBackupApp,
TransactionReportApp, CombineTransactionsApp, PrintTcatBalApp).

AAP compliance
--------------
  * @CobolProgram(value="CBACT04C", sourcePath="app/cbl/CBACT04C.cbl") per
    AAP §0.7.1 traceability mandate.
  * public static final ScopedValue<BatchRunContext> BATCH_CTX bound via
    ScopedValue.where(...).call(...) per AAP §0.6.6 (replaces ThreadLocal).
  * Plain Java constructor injection of the five CbAct04C ports per AAP
    §0.3.1 hexagonal layout (TransactionCategoryBalanceRepository,
    AccountRepository, CardXrefRepository, DiscountGroupRepository,
    TransactionRepository). No Spring.
  * JCL PARM='2022071800' preserved verbatim as DEFAULT_PARM_DATE.
    Resolution order: args[0] > carddemo.intcalc.parm > default.
  * PARM parsed via DateTimeFormatter.ofPattern("yyyyMMdd")
    .withResolverStyle(ResolverStyle.STRICT)